DietPi-Config | Audio > Sound card: Added option for force 3.5mm output with Onboard RPi: https://github.com/Fourdee/DietPi/issues/704
DietPi-Config | Audio > Sound card: Added support for selecting USB-DAC sound cards: https://github.com/Fourdee/DietPi/issues/683
DietPi-Config | Audio > Sound card: Added support for RPi 'HifiBerry DIGI Pro' sound card.
DietPi-Software | Open Media Vault: Is now available for installation: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=4859#p4859
DietPi-Software | MySQL/MariaDB: Data store is now located in the DietPi User data location (eg: /mnt/dietpi_userdata/mysql). Should offer improved performance for USB drive users: https://github.com/Fourdee/DietPi/issues/672
DietPi-Software | NetData updated to latest version (1.4.0): https://github.com/Fourdee/DietPi/issues/696
DietPi-Software | Added support for Apt-Fast if installed: https://github.com/Fourdee/DietPi/issues/698
DietPi-Software | PiHole: Access via http://ip/admin is now supported, for new installations: https://github.com/Fourdee/DietPi/issues/703
Typo | Correct use of MHz (previously Mhz). Thanks to Rainer.

Bug fixes:
General | RPi 3 onboard Bluetooth is now functional: https://github.com/Fourdee/DietPi/issues/693
General | Odroid C2: Resolved an issue with deb-multimedia repo failing GPG key: https://github.com/Fourdee/DietPi/issues/677
General | Resolved an issue where access to /mnt/usb_1 would hang the program/command, when no USB drive was attached: https://github.com/Fourdee/DietPi/issues/684
General | Resolved an issue where alsamixer was unable to load sound card device: https://github.com/Fourdee/DietPi/issues/705
General | Odroids: Resolved an issue where Meverics custom CPU governor script, would override DietPi applied CPU govs during boot.
DietPi-Config | Resolved an issue where NTPD Daemon + Drift mode, did not create drift file. This mode has now been moved to systemd-timesyncd: https://github.com/Fourdee/DietPi/issues/709