@@ -6884,8 +6884,8 @@ _EOF_
 
 			# - Move logfiles to /var/log/ (dietpi-ramlog)
 			#	Remove any previous folders to clear for symlink
-			rm -R "$FP_DIETPI_USERDATA_DIRECTORY"/roon/RoonBridge/Logs
-			rm -R "$FP_DIETPI_USERDATA_DIRECTORY"/roon/RAATServer/Logs
+			rm -R "$FP_DIETPI_USERDATA_DIRECTORY"/roon/RoonBridge/Logs &> /dev/null
+			rm -R "$FP_DIETPI_USERDATA_DIRECTORY"/roon/RAATServer/Logs &> /dev/null
 
 			mkdir -p "$FP_DIETPI_USERDATA_DIRECTORY"/roon/RoonBridge
 			mkdir -p "$FP_DIETPI_USERDATA_DIRECTORY"/roon/RAATServer
