@@ -2217,6 +2217,17 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#Reduce DHCP request retry count and timeouts: https://github.com/Fourdee/DietPi/issues/711
+		sed -i '/^#timeout /d' /etc/dhcp/dhclient.conf
+		sed -i '/^#retry /d' /etc/dhcp/dhclient.conf
+		sed -i '/^timeout /d' /etc/dhcp/dhclient.conf
+		sed -i '/^retry /d' /etc/dhcp/dhclient.conf
+		cat << _EOF_ >> /etc/dhcp/dhclient.conf
+timeout 10;
+retry 4;
+_EOF_
+
+		#-------------------------------------------------------------------------------
 		#systemctl disable armhwinfo: Turns out this does more than just obtain info, also sets device specific "workarounds/fixes": https://github.com/igorpecovnik/lib/blob/73a4dd60a2b6ab9bd8008fb0ef06344e378a557f/scripts/armhwinfo
 		#-------------------------------------------------------------------------------
 
