@@ -13,6 +13,7 @@ DietPi-Config | Audio > Sound card: Added support for HDMI/3.5mm sound cards on 
 DietPi-Config | Audio > Sound card: Added option for force 3.5mm output with Onboard RPi: https://github.com/Fourdee/DietPi/issues/704
 DietPi-Config | Audio > Sound card: Added support for selecting USB-DAC sound cards: https://github.com/Fourdee/DietPi/issues/683
 DietPi-Config | Audio > Sound card: Added support for RPi 'HifiBerry DIGI Pro' sound card.
+DietPi-Config | WiFi: Reduced the DHCP retry count and timeouts, to prevent a unnecessary wait when enabling WiFi for the 1st time: https://github.com/Fourdee/DietPi/issues/711
 DietPi-Software | Open Media Vault: Is now available for installation: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=4859#p4859
 DietPi-Software | MySQL/MariaDB: Data store is now located in the DietPi User data location (eg: /mnt/dietpi_userdata/mysql). Should offer improved performance for USB drive users: https://github.com/Fourdee/DietPi/issues/672
 DietPi-Software | NetData updated to latest version (1.4.0): https://github.com/Fourdee/DietPi/issues/696
